test_programs/compile_failure/invalid_main_sub_lib/src/main.nr
mod lib;

use crate::lib::foo;

fn main() {}
